# multichannel-audio-recorder

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
Source/: Main.cpp
Source/Recording/: ChannelRecorder.cpp  ChannelRecorder.h
Source/UI/: LevelMeter.h  MainComponent.cpp  MainComponent.h
Source/Utilities/: RecordingPathBuilder.h
docs/: ARCHITECTURE.md
